<resources>
    <string name="app_name">MyKtor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_desc">Изображение категории</string>

    <string name="favorite">В избранное</string>
    <string name="order">Заказать</string>
    <string name="plus">Плюс</string>
    <string name="minus">Минус</string>
    <string name="product_image">Изображение товара</string>

    <string name="add_to_cart">В корзину</string>
    <string name="in_cart">В корзине</string>
    <string name="edit_product">Редактировать</string>
    <string name="text_delete">Удалить</string>
    <string name="product_added">Добавлен %1$d товар(ов)</string>
    <string name="back">Назад</string>


    <string-array name="contact_type_entries">
        <item>Tel</item>
        <item>Email</item>
        <item>Fax</item>
        <item>Другое</item>
    </string-array>


    <!-- Validation messages -->
    <string name="error_max_length">Не более %1$d символов</string>
    <string name="error_reserved_name">Занято, попробуй другое</string>
    <string name="error_prohibited_words">Имя не может содержать мат</string>
    <string name="error_invalid_characters_for_unique_name">Может содержать только латинские буквы, цифры, -, _ @, #, /</string>

    <!-- Validation -->
    <string name="error_empty_field">Поле не может быть пустым</string>
    <string name="error_invalid_email_format">Неверный формат email</string>
    <string name="error_invalid_characters">Недопустимые символы</string>
    <string name="error_invalid_characters2">Разрешены только латинские буквы, цифры, точка и тире</string>
    <string name="error_emoji_not_allowed">Поле не может содержать Emoji</string>
    <string name="error_line_breaks">Email не может содержать переносы строк</string>
    <string name="error_starting_or_ending_dot">Email не может начинаться или заканчиваться точкой</string>
    <string name="error_starting_or_ending_space">Email не может начинаться или заканчиваться пробелом</string>
    <string name="error_starting_dot">Текст не может начинаться с точки</string>
    <string name="error_end_dot">Текст не может заканчиватся точкой</string>
    <string name="error_min_length">Минимум %1$d символов</string>
    <string name="error_length">Значение должно равнятся %1$d символов</string>
    <string name="error_digits_only">Разрешены только цифры от 0 до 9</string>
    <string name="error_exact_length">Должно быть %1$d символов</string>
    <string name="exact_length">Введите %1$d символов</string>
    <string name="error_only_letters_allowed">Разрешены только буквы (латиница, кириллица), пробел и тире</string>
    <string name="error_only_single_space">Не должно быть двойных пробелов</string>
    <string name="error_no_leading_trailing_space">Не должно быть пробела в начале или конце</string>
    <string name="error_line_breaks_not_allowed">Переносы строк запрещены</string>

    <plurals name="remaining_characters">
        <item quantity="one">Остался символ - %d</item>
        <item quantity="few">Осталось символа - %d</item>
        <item quantity="many">Осталось символов - %d</item>
        <item quantity="other">Осталось символов - %d</item>
    </plurals>

</resources>